--- a/frontend/src/pages/auth/login.astro
+++ b/frontend/src/pages/auth/login.astro
@@ -16,7 +16,7 @@ import { Button } from '@/components/ui/button';
 
 	<body>
 		<Button class="absolute top-4 left-4 z-50 text-center flex items-center justify-center">
-			<a href="/" class="flex items-center gap-2">
+			<a href="/" class="flex items-center gap-2 w-full">
 				<ChevronLeft class="inline-block align-middle" />
 				Menu
 			</a>
