--- a/frontend/src/pages/auth/register.astro
+++ b/frontend/src/pages/auth/register.astro
@@ -1,38 +1,24 @@
 ---
 import '../../styles/global.css';
-import  Register  from '@/components';
-import { ChevronLeft } from 'lucide-vue-next';
-import { Button } from '@/components/ui/button';
+import  Register  from '@/components/Register.vue';
 import { Fingerprint } from 'lucide-vue-next';
+
+
+import Auth from '@/layouts/auth.astro';
 --- 
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Logon - Login</title>
-	</head>
 
-	<body>
-		<Button class="absolute top-4 left-4 z-50 text-center flex items-center justify-center">
-			<a href="/" class="flex items-center gap-2">
-				<ChevronLeft class="inline-block align-middle" />
-				Menu
-			</a>
-		</Button>
-		
-		<div class="grid place-items-center h-screen content-center">
-            <div class="flex justify-center">
+<Auth content={{ title: 'Logon - Register' }}>		
+		<div class="grid place-items-center h-screen content-center gap-4">
+            <div class="flex justify-center flex-col items-center gap-1.5">
+				<Fingerprint class="inline-block align-middle" />
                 <h1 class="text-3xl tracking-tight items-center justify-center">
-                    <Fingerprint class="inline-block align-middle" /> Logon
+                     Logon · Register
                 </h1>
             </div>
 			<Register client:only="vue" />
 		</div>
-	</body>
-</html>
+</Auth>
 
 <style>
 
